perf: paginate permission-filtered sidebar navigation